# UsefulCodes

./: README.md
GraphicsTutorials/: ReferenceCodes.cpp  Triangles.cpp  gl
GraphicsTutorials/ImageProcessing/Otsu/: CMakeLists.txt  myOtsu.cpp  test.sh  unusedcodes.cpp
GraphicsTutorials/ImageProcessing/Wrinkle/: CMakeLists.txt  test.sh  wrinkle.cpp
GraphicsTutorials/OpenScene/: CMakeLists.txt  triangle.cpp
GraphicsTutorials/PCL/: CMakeLists.txt  mesh.cpp  pcl_visualizer_demo.cpp
Wrinkle_Detection/: CMakeLists.txt  agglo_cluster.m  agglo_cluster.m~  backup_working.m  bounding.cpp  clustering_algorithm.m  clustering_algorithm.m~  clustering_algorithm_grayscale.m  clustering_algorithm_grayscale.m~  clustering_boundary.m  clustering_boundary.m~  clustering_fast_deleting_inside_pts.m  clustering_vec_bounding_box.m  clustering_vec_vis.m  clustering_vec_vis.m~  clustering_vec_vis_box_vary.m  clustering_vec_vis_fast.m  clustering_vec_vis_fast.m~  delete_this.m  demo.m  edge.py  exampledata.mat  final_floodfill.m  frangi_exp.py  hough_trans  hough_trans.m  houghspace.py  image_poly.cpp  image_polygon.cpp  image_processing.m  kmeans_clustering.m  kmeansproximityclustering.m  kmeansproximityclustering.m~  main.cpp  new_clustering_algo.m  new_clustering_algo.m~  prewitt.cpp  readfolder.py  readfolder2.py  ridge.py  (+26 more)
Wrinkle_Detection/include/: image_polygon.hpp
